[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyctftools"
version = "0.0.1"
# authors = [{ name = "Karsten Roelofs", email = "karsteneroelofs@gmail.com" }]
authors = [{ name = "Karsten Roelofs" }]
description = "A python package containing my personal collection of scripts written over the years during CTF challanges."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["tqdm", "english-words"]
# license = "MIT"
# license-files = ["LICEN[CS]E*"]

# [project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"
